trying to stop overlap

--- a/style.css
+++ b/style.css
@@ -91,3 +91,15 @@ h1 {
 .credits a:visited {
   color: #8d8e8b;
 }
+.head{
+  height: 18vh;
+  width: 100%;
+}
+.main {
+  height: 70vh;
+  width: 100%;
+}
+.credits {
+  height: 10vh;
+  width: 100%;
+}
